fixed scrollbars
-added scrollbars to dropdowns

--- a/client/src/components/Menu/CreateChart.css
+++ b/client/src/components/Menu/CreateChart.css
@@ -7,6 +7,14 @@
   padding: 10px 10px 0 0;
 }
 
+.dropdown-menu.show {
+  position: absolute !important;
+  display: block;
+  right: 0 !important;
+  height: 170px;
+  overflow-y: scroll;
+}
+
 .navBar-Color {
   background-color: #219ebc;
   color: white;
